--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,4 +4,7 @@ phases:
   install:
     runtime-versions:
       java: openjdk11
+  pre_build:
+    commands:
+      - echo Entered the pre_build phase...
 
