--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,4 +7,10 @@ phases:
   pre_build:
     commands:
       - echo Entered the pre_build phase...
+  build:
+    commands:
+      - echo Entered the build phase...
+      - echo Build started on `date`
+    finally:
+      - echo Build finished
 
