--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,7 @@ phases:
     commands:
       - echo Entered the build phase...
       - echo Build started on `date`
+      - echo $test
     finally:
       - echo Build finished
 
