Test gradle build

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,7 @@ phases:
       - echo Entered the build phase...
       - echo Build started on `date`
       - echo $test
+      - gradle build
     finally:
       - echo Build finished
 
