--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,11 +11,8 @@ phases:
     commands:
       - echo Entered the build phase...
       - echo Build started on `date`
-      - echo $test
-      - echo bierbier
-      - echo $bierbier
-      - echo bier
-      - echo $bier
+      - echo docker pass
+      - echo $docker_pass
       - gradle build
     finally:
       - echo Build finished
