--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
   pre_build:
     commands:
       - echo Entered the pre_build phase...
+      - docker login –u $DOCKER_USERNAME –p $DOCKER_PASSWORD
   build:
     commands:
       - echo Entered the build phase...
