--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,8 @@ phases:
   install:
     runtime-versions:
       java: openjdk11
+    commands:
+      - apt-get update -y
   pre_build:
     commands:
       - echo Entered the pre_build phase...
