--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,8 @@ phases:
   pre_build:
     commands:
       - echo Entered the pre_build phase...
+      - docker version
+      - docker login –u User –p $LOGIN_PASSWORD
       - docker login –u $docker_username –p $docker_passowrd
   build:
     commands:
