--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,7 @@ phases:
       - gradle build
       - echo docker pass
       - echo $docker_pass
+      - docker images
       - docker build -t spring-security-items .
       - docker push drabzes/spring-security-items:latest
     finally:
